syntax = "proto3";

package models;

import "google/protobuf/timestamp.proto";

option go_package = "AlgorithimcTraderDistributed/common/models/proto/generated";

message OHLCV {
  double open = 1;
  double high = 2;
  double low = 3;
  double close = 4;
  double volume = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message Trade {
  double price = 1;
  double quantity = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message BookTicker {
  double bid_price = 2;
  double bid_quantity = 3;
  double ask_price = 4;
  double ask_quantity = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message OrderBookEntry {
  double price = 1;
  double quantity = 2;
}

message OrderBookUpdate {
  repeated OrderBookEntry ask_updates = 1;
  repeated OrderBookEntry bid_updates = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message OrderBookSnapshot {
  repeated OrderBookEntry asks = 1;
  repeated OrderBookEntry bids = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SerializedJSON {
  string data = 1;
}

message MarketDataPiece {
  string source = 1;
  string symbol = 2;
  string base_type = 3;
  string interval = 4;
  string processors = 5;
  google.protobuf.Timestamp external_timestamp = 6;
  google.protobuf.Timestamp receive_timestamp = 7;
  google.protobuf.Timestamp send_timestamp = 8;
  oneof payload {
    OHLCV ohlcv = 9;
    Trade trade = 10;
    BookTicker book_ticker = 11;
    OrderBookUpdate order_book_update = 12;
    OrderBookSnapshot order_book_snapshot = 13;
    SerializedJSON serialized_json = 14;
  }
}